--- a/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.slides.html
+++ b/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.slides.html
@@ -13236,7 +13236,7 @@ Pieter Huycke</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="What?">What?<a class="anchor-link" href="#What?">&#182;</a></h2><p>Let's take a look at their own definition of what this package is about ⬇️</p>
+<h2 id="What?">What?<a class="anchor-link" href="#What?">&#182;</a></h2><p>Let's take a look at the documentation the developers wrote for $scikit-learn$ ⬇️</p>
 
 </div>
 </div>
