--- a/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.slides.html
+++ b/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.slides.html
@@ -13674,7 +13674,7 @@ Loop over each possible pair of features (sepal length + sepal width, sepal leng
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="The-digits-dataset">The digits dataset<a class="anchor-link" href="#The-digits-dataset">&#182;</a></h2><p>This dataset is made up of 1797 $8 \times 8$ images.<br>
 Each image, like the one shown below (representing number 1), is of a hand-written digit.<br>
-The dataset is included in <code>sklearn.datasets</code>.
+The dataset is included in <code>sklearn.datasets</code>.<br>
 Additional information can be found on <a href="https://archive.ics.uci.edu/ml/datasets/Pen-Based+Recognition+of+Handwritten+Digits">this webpage</a>.</p>
 <p><img src="./digit_1.jpg" alt="Digit example"></p>
 
