--- a/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.slides.html
+++ b/AY 2019 - 2020/Lesson 08/Practical session/course examples/Les 08.slides.html
@@ -13344,7 +13344,7 @@ See http://scikit-learn.org for complete documentation.
 <h2 id="A-single-slide-on-organizational-matters">A single slide on organizational matters<a class="anchor-link" href="#A-single-slide-on-organizational-matters">&#182;</a></h2><ol>
 <li>At the end of exercises 1 and 2, some additional exercises are defined.<br>
 These are meant as <font color='indigo'>homework assignments</font>, and will therefore not be considered during this practical session.</li>
-<li>In the next MCP test, we will ask you to program more than you did in test 2.
+<li>In the next MCP test, we will ask you to program more than you did in test 2.<br>
 You can prepare yourself adequately by completing the exercises in the practicals and the homeworks.</li>
 </ol>
 
@@ -13397,7 +13397,7 @@ Below, we define a list of adaptations that has to be completed to make sure the
 <li>The output should be a 1D array, so we should work with integer values as output (i.e. <code>group_1 = 0</code>).<br>
 Mind that if you would check the dimensionality of a 1D array (<code>arr.shape</code>), your output would be: <code>(x,)</code>.</li>
 <li>Note that $scikit-learn$ works best with NumPy arrays.<br>
-So, the variables <code>image_florence</code> and <code>group_1</code> should be converted to NumPy arrays.</li>
+So, the variables <code>image_1</code> and <code>group_1</code> should be converted to NumPy arrays.</li>
 <li>The input should be an $N \times P$ array.<br>
 Here, $N$ represents how many times the pattern is shown to the model.<br>
 In contrast, $P$ is the length of the pattern.   <ul>
@@ -13415,7 +13415,7 @@ In contrast, $P$ is the length of the pattern.   <ul>
 <h2 id="Extensions-to-be-done">Extensions to be done<a class="anchor-link" href="#Extensions-to-be-done">&#182;</a></h2><ol>
 <li>Because <code>scikit-learn</code> works only when instances from several <strong>different</strong> classes are offered, we will add another group image, and their associated label.<ul>
 <li>Add a variabel refering to the image of your favorite group:<br>
-<code>groupname = np.array([.01, .99, .01, .99, .01, .99])</code></li>
+<code>image_2 = np.array([.01, .99, .01, .99, .01, .99])</code></li>
 </ul>
 </li>
 <li>Add a label associated with this new group: <code>group_2 = 1</code>.</li>
